--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,28 +4,35 @@ html {
 }
 
 body {
-  min-height: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  position: relative;
   padding: 0;
   margin: 0;
+  position: relative;
+}
+
+.body {
+  min-height: 100vh;
+  min-width: 100%;
+  max-width: 100%;
+  max-height: 100vh - (30px - 50px);
 }
 
 .header {
   position: absolute;
   top: 0;
   width: 100vw;
-  height: 10vh;
+  height: 30px;
   background-color: black;
 }
 
 .footer {
+  padding-left: 2vw;
+  gap: 5px;
+  align-items: center;
+  display: flex;
   position: absolute;
   bottom: 0;
   width: 100vw;
-  height: 10vh;
+  height: 70px;
   background-color: red;
 }
 
@@ -34,6 +41,7 @@ body {
   flex-direction: column;
   position: absolute;
   border: 5px solid black;
+  padding: 10px
 }
 
 .appButtonContainer {
@@ -44,9 +52,4 @@ body {
   position: absolute;
   width: 100px;
   border: 5px solid black;
-}
-
-#testapp1 {
-  left: 600px;
-  top: 200px;
 }
