--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,3 +52,25 @@ body {
   width: 100px;
   border: 5px solid black;
 }
+
+.appHeader {
+  height: 40px;
+  width: auto;
+  background: grey;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+}
+
+.appCloseButton > button {
+  display: none;
+}
+
+.appCloseButton {
+  width: 30px;
+  height: 30px;
+  background: black;
+  position: absolute;
+  right: 5px;
+}
