--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,6 +41,7 @@ body {
   flex-direction: column;
   position: absolute;
   border: 5px solid black;
+  background-color: blanchedalmond;
 }
 
 .appButtonContainer {
@@ -73,4 +74,56 @@ body {
   background: black;
   position: absolute;
   right: 5px;
+}
+
+.memoryButtonContainer {
+  width: 200px;
+  height: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
+}
+
+.memoryButtons {
+  width: 50px;
+  height: 50px;
+  background-image: url(../img/memory/none.png);
+}
+
+.memoryButtons button {
+  display: none;
+}
+
+.inputDiv {
+  display: flex;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#chat p {
+  margin-top: 0px;
+  margin-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-bottom: 1px dotted black;
+}
+
+.messagesDiv {
+  position: relative;
+  box-sizing: border-box;
+  border: 1px solid black;
+  left: 10px;
+  background-color: white;
+  width: 190px;
+  margin-bottom: 10px;
+}
+
+.memoryWinMessage {
+  background: 'brown';
+  position: 'absolute';
+  top: '65px';
+  left: '55px';
+  display: 'flex';
+  justify-Content: 'center';
+  align-Items: 'center';
 }
