F1 completed, memory game VERY BUG, needs to fix it

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -127,3 +127,8 @@ body {
   justify-Content: 'center';
   align-Items: 'center';
 }
+
+:focus {
+  background-color: aqua;
+  z-index: 10000000;
+}
