--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,15 @@
 html {
   height: 100%;
   width: 100%;
+  background-image: url('../img/background.jpg');
+  background-size: cover;
 }
 
 body {
   padding: 0;
   margin: 0;
   position: relative;
+
 }
 
 .body {
@@ -33,7 +36,7 @@ body {
   bottom: 0;
   width: 100vw;
   height: 70px;
-  background-color: red;
+  background-color: rgba(71, 92, 129, 0.435);
 }
 
 .app {
@@ -41,7 +44,7 @@ body {
   flex-direction: column;
   position: absolute;
   border: 5px solid black;
-  background-color: blanchedalmond;
+  background-color: rgba(255, 235, 205, 0.46);
 }
 
 .appButtonContainer {
@@ -82,6 +85,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   display: flex;
+  justify-content: center;
 }
 
 .memoryButtons {
@@ -129,6 +133,17 @@ body {
 }
 
 :focus {
-  background-color: aqua;
   z-index: 10000000;
+}
+
+#myList {
+  background-color: aliceblue;
+  border: 1px solid black;
+}
+
+.appMain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
