--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,10 @@ body {
   padding: 0;
   margin: 0;
   position: relative;
+}
 
+.login {
+  color: white;
 }
 
 .body {
@@ -124,7 +127,7 @@ body {
 }
 
 #chat p {
-  margin-top: 0px;
+  margin-top: 0;
   margin-bottom: 5px;
   padding-left: 5px;
   padding-right: 5px;
@@ -144,8 +147,8 @@ body {
   top: '65px';
   left: '55px';
   display: 'flex';
-  justify-Content: 'center';
-  align-Items: 'center';
+  justify-content: 'center';
+  align-items: 'center';
 }
 
 .memoryButtonContainer {
@@ -184,7 +187,7 @@ body {
   height: 24px;
   background-image: url(../img/battleship/none.png);
   background-size: cover;
-  border: 1px solid black;;
+  border: 1px solid black;
 }
 
 .battleshipGame {
