--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,38 +8,58 @@ html {
 }
 
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   position: relative;
 }
 
 .login {
-  color: white;
+  background-color: rgba(255, 255, 255, 0.552);
+  max-width: 30vw;
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 5px;
+  border: 5px solid black;
+  background-blend-mode: multiply;
+}
+
+.login p {
+  margin: 5px;
+  padding: 0;
 }
 
 .body {
-  min-height: 100vh;
-  min-width: 100%;
-  max-width: 100%;
-  max-height: 100vh - (30px - 50px);
+  position: absolute;
+  top: 30px;
+  min-height: 80vh;
+  min-width: 80vw;
+  max-width: 100vw;
+  max-height: 100vh - 80px;
 }
 
 .header {
   position: absolute;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 30px;
   background-color: black;
 }
 
 .footer {
   padding-left: 2vw;
+  box-sizing: border-box;
   gap: 5px;
   align-items: center;
   display: flex;
   position: absolute;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 70px;
   background-color: rgba(71, 92, 129, 0.435);
 }
