--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   margin: 0;
   position: relative;
+  overflow: hidden;
 }
 
 .login {
@@ -37,10 +38,9 @@ body {
 .body {
   position: absolute;
   top: 30px;
-  min-height: 80vh;
-  min-width: 80vw;
+  min-height: calc(100vh - 100px);
+  min-width: 100vw;
   max-width: 100vw;
-  max-height: 100vh - 80px;
 }
 
 .header {
@@ -57,6 +57,11 @@ body {
   padding: 0;
   color: white;
   padding-left: 5px;
+}
+
+#usernameTooltip {
+  color: 'white';
+  display: 'none';
 }
 
 .footer {
@@ -129,7 +134,7 @@ body {
 }
 
 :focus {
-  z-index: 10000000;
+  z-index: 999;
 }
 
 :focus .appHeader {
