--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,10 +210,16 @@ select {
 }
 
 .memoryButtons {
-  width: 50px;
-  height: 50px;
+  width: 48px;
+  height: 48px;
   background-image: url(../img/memory/rnone.png);
   background-size: cover;
+  border: 1px solid black;
+}
+
+.memoryButtons:hover {
+  cursor: pointer;
+  border: 1px solid red;
 }
 
 .memoryButtons button {
@@ -224,6 +230,11 @@ select {
 #gameStyle {
   text-align: center;
   width: 98px;
+}
+
+select:hover {
+  cursor: pointer;
+  border: 1px solid red;
 }
 
 select {
@@ -246,6 +257,13 @@ select {
 }
 
 .battleshipGame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.battleshipGameBody {
   display: flex;
   flex-direction: row;
   justify-content: center;
